[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mlearn-study"
version = "1.0.0"
description = "My notes about Machine Learning"
authors = []

[tool.poetry.dependencies]

python = "^3.8"
gensim = "~3.8"
pandas = "~0.25"
scikit-learn = "~0.23"
optuna = "~2.9"
torch = "~1.10"
transformers = "~4.18"
ray = { version = "^1.12.0", extras = ["serve"] }
jupyterlab = { version = "^3.0.16", optional = true }

# Development
[tool.poetry.dev-dependencies]
pytest = "^6.1"
black = "^21.6b0"
